
[gd_scene load_steps=5 format=3 uid="uid://cbdahhosbo8jd"]

[ext_resource type="Script" path="res://UI/Scene/Pause/pause.gd" id="1_0wdqy"]
[ext_resource type="Theme" path="res://UI/Theme/player_stat.tres" id="2_44g7l"]
[ext_resource type="FontFile" path="res://UI/Common/pixel-dead.italic.ttf" id="3_1t42e"]
[ext_resource type="AudioStream" uid="uid://bjisodaamlql7" path="res://UI/Scene/Sfx/button select SFX.mp3.tres" id="4_dnc7i"]

[node name="Pause_Canvas" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_0wdqy")
metadata/_edit_lock_ = true

[node name="Pause" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)
metadata/_edit_lock_ = true


[node name="CenterContainer" type="CenterContainer" parent="Pause"]

layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Pause/CenterContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Pause/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20


[node name="VBoxContainer" type="VBoxContainer" parent="Pause/CenterContainer/PanelContainer/MarginContainer"]

layout_mode = 2
theme = ExtResource("2_44g7l")
theme_override_constants/separation = 8
alignment = 1


[node name="Label" type="Label" parent="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]

layout_mode = 2
theme_override_fonts/font = ExtResource("3_1t42e")
theme_override_font_sizes/font_size = 80
text = "Paused"
horizontal_alignment = 1


[node name="Control" type="Control" parent="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Resume" type="Button" parent="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]

layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_fonts/font = ExtResource("3_1t42e")
theme_override_font_sizes/font_size = 30
text = "Resume game"


[node name="ToMainMenu" type="Button" parent="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]

layout_mode = 2
theme_override_fonts/font = ExtResource("3_1t42e")
theme_override_font_sizes/font_size = 30
text = "Main Menu"


[node name="Quit" type="Button" parent="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]

layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
theme_override_fonts/font = ExtResource("3_1t42e")
theme_override_font_sizes/font_size = 30
text = "Quit"


[node name="Button Press" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource("4_dnc7i")
volume_db = -21.092
pitch_scale = 0.75

[connection signal="focus_entered" from="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_focus_entered"]
[connection signal="pressed" from="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ToMainMenu" to="." method="_on_to_main_menu_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

